--- a/11_msa/chpa03-sping-cloud-gateway-lecture-source/src/main/resources/application.yml
+++ b/11_msa/chpa03-sping-cloud-gateway-lecture-source/src/main/resources/application.yml
@@ -31,6 +31,8 @@ spring:
               # ???? built in ?? + custom ??(feat.spring security) ?? ??
               filters:
                 - RewritePath=/first-service/(?<segment>.*),/$\{segment}
+                - AddRequestHeader=first-request, first-request-header
+                - AddResponseHeader=first-response, first-response-header
 
             - id: 2st-service-get
               uri: lb://2ST-SERVICE
@@ -38,3 +40,5 @@ spring:
                 - Path=/second-service/**
               filters:
                 - RewritePath=/second-service/(?<segment>.*),/$\{segment}
+
+# gateway? routes ??? ?? ??( ? ??? http method ?? ??)? ?? ?? ????.
